--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -60,27 +60,6 @@ header{
   text-align: center;
   margin-bottom: 7%;
 }
-/* .skillss-detail button{
-  background-color: #F5B11D;
-  color: #252526;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 12px 15px 12px 15px;
-}
-.skillss-detail h5{
-  font-weight: bold;
-  font-family:inherit;
-  margin-bottom: 20px;
- }
- .skillss-detail p{
-   font-size: 15px;
-   text-align: justify;
-  font-family:inherit;
-  margin-bottom: 20px;
- }
- .list-skillss{
-   margin-bottom: 20px;
- } */
  .skillss-detail{
   padding: 10px 0px 10px 50px;
  }
@@ -114,28 +93,23 @@ header{
  .experiences-desc{
   padding: 0px 30px 0px 30px;
  }
-#education{
+ #education{
   margin-top: 7%;
+}
+.title-education h1{
+  text-align: center;
+  margin-bottom: 7%;
+}
+.education-detail h4{
+ color: rgb(18, 170, 230);
+ font-weight: bold;
+ margin-bottom: 20px;
+}
+.education-detail p{
+  font-size: 16px;
+  text-align: justify;
+  margin-bottom: 20px;
  }
- .title-education h1{
-  text-align: center;
-  margin-bottom: 5%;
-}
-.box-education{
-  margin-bottom: 30px;
-}
-.box-education img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 25px;
-}
-.box-education h6{
-  text-align: center;
-  color: rgb(90, 87, 87);
-  margin: 10px 0px 10px 0px;
-  font-weight: bold;
-}
 
 
 #interests{
